--- a/style.css
+++ b/style.css
@@ -148,7 +148,7 @@
   
 }
 #btnAdd:hover {
-  background-color: rgb(45, 30, 131); 
+  background-color: olive; 
   color: white;
   cursor: pointer;
 }
